# hconfig-remediation-ansible

./: .bandit  .gitignore  README.md  ansible.cfg  galaxy.yml  pyproject.toml  requirements.txt  router1-compiled.conf  router1-running.conf  tasks.py  test.pb.yml
.github/workflows/: build-and-test.yaml
example/: inventory  router1-compiled.conf  router1-running.conf  router2-generated.conf  router2-running.conf  router2.pb.yml  test.pb.yml
example/roles/os_ios/vars/: hierarchical_configuration_options.yml  hierarchical_configuration_tags.yml
plugins/modules/: remediation.py
roles/os_iosxr/vars/: hierarchical_configuration_options.yml  hierarchical_configuration_tags.yml
tests/fixtures/: router1-remediation-with-exclude-tags.conf  router1-running.conf  tag_rules.yml  test_remediation.yml  test_remediation_both_tags.yml  test_remediation_exclude_tags.yml  test_remediation_include_tags.yml
tests/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
tests/molecule/default/tests/: test_remediation.py
