[tool.poetry]
name = "hconfig-remediation-ansible"
version = "3.0.0"
description = "This is a collection of hier_config ansible modules."
authors = ["James Williams <james.williams@packetgeek.net>"]
license = "Apache"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
hier-config = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
ansible = "^11.1.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
